fix(sign-in): Resolve horizontal scrollbar issue caused by negative margin
修復 sign-in 頁面因負 margin 導致的水平滾動條問題。

- 移除 btn-group，原本預期使用 btn-group 的線條，後來直接設置 border-end border-end-sm-0。
- 三個 button 寬度在手機版相同，用 flex: 1 1 0% 來自動分配（其中一個會小約 1px），桌機版 flex-direction 為 column，因 flex-basis 特性會影響元素高度，導致 h-social-media 失效，透過 flex-sm-fill 的 flex-basis: auto 來解決。
- 透過 mx-n8 手機版 row 區塊內容撐出 container padding 達到滿版效果。

d-grid mx-n8 失效原因：
1. col-md-10 設置了 flex 置中排版 d-flex flex-wrap justify-content-center（並且這裡是多餘的，因為父層 row 有設置 justify-content-center）。
2.導致 d-grid 要設置 w-100 才會滿版。

--- a/assets/scss/utils/_utilities.scss
+++ b/assets/scss/utils/_utilities.scss
@@ -138,7 +138,8 @@ $utilities: map-merge(
               map-get(map-get($utilities, "flex"), "values"),
               (
                 none: none,
-                expand: 1 0 0,
+                expand: 1 0 0%,
+                1: 1 1 0%,
               )
             ),
         )
@@ -217,6 +218,13 @@ $utilities: map-merge(
     "font-weight":
       map-merge(
         map-get($utilities, "font-weight"),
+        (
+          responsive: true,
+        )
+      ),
+    "border-end":
+      map-merge(
+        map-get($utilities, "border-end"),
         (
           responsive: true,
         )
