--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -70,7 +70,7 @@ $display-font-sizes: (
 $lead-font-size:      20px;
 $lead-font-weight:    600;
 
-$list-inline-padding: auto;
+$vr-border-width:     1px; // for sign-in.html connect social media section at mobile size
 
 // Paragraphs
 $paragraph-margin-bottom: 0;
